# linear_regression_waic

./: .gitignore  README.md  note.ipynb  numpyro.ipynb  pyproject.toml  stan.ipynb
src/app/: inference.py  model.py  waic.py
src/app/numpyro/: __init__.py  inference.py
src/app/stan/: __init__.py  inference.py  model.py  model.stan
